--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "Ergebnisse ansehen",
   "previous": "Zurück",
   "next": "Weiter",
-  "skip": "Überspringen"
+  "skip": "Überspringen",
+  "pageTitle": "Schwulen-Test | Bin ich schwul? Quiz zur Selbstfindung",
+  "pageDescription": "🌈 Das Verständnis deiner Identität beginnt mit Bewusstsein. Das \"Bin ich schwul?\"-Quiz ist ein sicherer erster Schritt – ohne Druck, nur zur Selbstreflexion.",
+  "quickGuide": "🟣 Schnellübersicht",
+  "exploreKey": "Erkunde wichtige Bereiche auf deiner Identitätsreise:",
+  "whyTake": "Warum diesen Test machen?",
+  "whatIsOrientation": "Was ist sexuelle Orientierung?",
+  "understandingSpectrum": "Das LGBTQIA+-Spektrum verstehen",
+  "beforeBegin": "Bevor du beginnst",
+  "howWorks": "So funktioniert der Test",
+  "scoreBreakdown": "Auswertung & Bedeutung",
+  "resultsMeaning": "Was dein Ergebnis bedeutet",
+  "stillExploring": "Noch am Erkunden? Das ist okay",
+  "commonQuestions": "Häufige Fragen",
+  "helpfulResources": "Hilfreiche Ressourcen",
+  "aboutDescription": "Diese vertrauliche 16-Fragen-Bewertung hilft dir, deine sexuelle Orientierung zu erkunden. Basierend auf psychologischen Prinzipien bietet sie einen Rahmen zur Reflexion über gleichgeschlechtliche Anziehung.",
+  "privacyDescription": "Deine Antworten bleiben komplett privat. Wir speichern keine persönlichen Daten oder Testantworten.",
+  "selfDiscoveryDescription": "Nutze diesen Test als Ausgangspunkt für Selbstreflexion, nicht als endgültiges Label.",
+  "spectrumDescription": "Verstehe, dass Sexualität auf einem Spektrum existiert und sich im Laufe der Zeit verändern kann.",
+  "quizDuration": "Kostenlos, anonym und dauert nur 5 Minuten"
 }
