--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "See Results",
   "previous": "Previous",
   "next": "Next",
-  "skip": "Skip"
+  "skip": "Skip",
+  "pageTitle": "Gay Test | Am I Gay? Quiz for Self-Discovery",
+  "pageDescription": "🌈 Understanding your identity starts with awareness. The \"Am I Gay Quiz\" is a safe first step — no pressure, just reflection.",
+  "quickGuide": "🟣 Quick Guide",
+  "exploreKey": "Explore key sections to navigate your identity journey:",
+  "whyTake": "Why Take the Gay Test?",
+  "whatIsOrientation": "What Is Sexual Orientation?",
+  "understandingSpectrum": "Understanding the LGBTQIA+ Spectrum",
+  "beforeBegin": "Before You Begin the Am I Gay Quiz",
+  "howWorks": "How This Quiz Works",
+  "scoreBreakdown": "Score Breakdown & Meaning",
+  "resultsMeaning": "What Your Gay Test Result Means",
+  "stillExploring": "Still Exploring? That's Okay.",
+  "commonQuestions": "Common Questions",
+  "helpfulResources": "Helpful Resources",
+  "aboutDescription": "This confidential 16-question assessment is designed to help you explore your sexual orientation. Based on psychological principles, it provides a framework for reflecting on same-sex attraction and where you might fall on the sexuality spectrum.",
+  "privacyDescription": "Your answers stay completely private. We don't store any personal data or quiz responses.",
+  "selfDiscoveryDescription": "Use this quiz as a starting point for personal reflection, not as a definitive label.",
+  "spectrumDescription": "Understand that sexuality exists on a spectrum and may be fluid throughout your life.",
+  "quizDuration": "Free, anonymous, and takes about 5 minutes"
 }
