--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "Ver resultados",
   "previous": "Anterior",
   "next": "Siguiente",
-  "skip": "Saltar"
+  "skip": "Saltar",
+  "pageTitle": "Test Gay | ¿Soy gay? Test de autodescubrimiento",
+  "pageDescription": "🌈 La comprensión de tu identidad comienza con la conciencia. El \"Test ¿Soy gay?\" es un primer paso seguro – sin presiones, solo reflexión.",
+  "quickGuide": "🟣 Guía rápida",
+  "exploreKey": "Explora secciones clave para navegar tu viaje de identidad:",
+  "whyTake": "¿Por qué hacer este test?",
+  "whatIsOrientation": "¿Qué es la orientación sexual?",
+  "understandingSpectrum": "Entendiendo el espectro LGBTQIA+",
+  "beforeBegin": "Antes de empezar",
+  "howWorks": "Cómo funciona el test",
+  "scoreBreakdown": "Desglose de puntuación y significado",
+  "resultsMeaning": "Qué significan tus resultados",
+  "stillExploring": "¿Aún explorando? Está bien",
+  "commonQuestions": "Preguntas comunes",
+  "helpfulResources": "Recursos útiles",
+  "aboutDescription": "Esta evaluación confidencial de 16 preguntas está diseñada para ayudarte a explorar tu orientación sexual. Basada en principios psicológicos, proporciona un marco para reflexionar sobre la atracción hacia el mismo sexo.",
+  "privacyDescription": "Tus respuestas permanecen completamente privadas. No almacenamos ningún dato personal ni respuestas del test.",
+  "selfDiscoveryDescription": "Usa este test como punto de partida para la reflexión personal, no como una etiqueta definitiva.",
+  "spectrumDescription": "Comprende que la sexualidad existe en un espectro y puede ser fluida a lo largo del tiempo.",
+  "quizDuration": "Gratis, anónimo y toma solo 5 minutos"
 }
