--- a/locales/fi/translation.json
+++ b/locales/fi/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "Katso tulokset",
   "previous": "Edellinen",
   "next": "Seuraava",
-  "skip": "Ohita"
+  "skip": "Ohita",
+  "pageTitle": "Homotesti | Olenko homo? Itsetutkiskelutesti",
+  "pageDescription": "🌈 Identiteettisi ymmärtäminen alkaa tietoisuudesta. \"Olenko homo?\"-testi on turvallinen ensimmäinen askel – ilman painetta, vain pohdintaa.",
+  "quickGuide": "🟣 Pikaopas",
+  "exploreKey": "Tutki keskeisiä osioita identiteettimatkallasi:",
+  "whyTake": "Miksi tehdä tämä testi?",
+  "whatIsOrientation": "Mitä on seksuaalinen suuntautuminen?",
+  "understandingSpectrum": "LGBTQIA+-spektrin ymmärtäminen",
+  "beforeBegin": "Ennen aloittamista",
+  "howWorks": "Miten testi toimii",
+  "scoreBreakdown": "Pisteiden erittely ja merkitys",
+  "resultsMeaning": "Mitä tuloksesi tarkoittavat",
+  "stillExploring": "Vielä tutkimassa? Se on ok",
+  "commonQuestions": "Yleiset kysymykset",
+  "helpfulResources": "Hyödyllisiä resursseja",
+  "aboutDescription": "Tämä luottamuksellinen 16 kysymyksen arviointi on suunniteltu auttamaan sinua tutkimaan seksuaalista suuntautumistasi. Psykologisiin periaatteisiin perustuen se tarjoaa kehyksen pohtia samaan sukupuoleen kohdistuvaa vetovoimaa.",
+  "privacyDescription": "Vastauksesi pysyvät täysin yksityisinä. Emme tallenna henkilökohtaisia tietoja tai testivastauksia.",
+  "selfDiscoveryDescription": "Käytä tätä testiä lähtökohtana itsereflektiolle, ei lopullisena leimana.",
+  "spectrumDescription": "Ymmärrä, että seksuaalisuus on spektri ja voi olla muuttuva ajan myötä.",
+  "quizDuration": "Ilmainen, anonyymi ja kestää vain 5 minuuttia"
 }
