--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "Voir les résultats",
   "previous": "Précédent",
   "next": "Suivant",
-  "skip": "Passer"
+  "skip": "Passer",
+  "pageTitle": "Test Gay | Suis-je gay ? Quiz de découverte de soi",
+  "pageDescription": "🌈 La compréhension de votre identité commence par la prise de conscience. Le quiz \"Suis-je gay ?\" est une première étape sûre – sans pression, juste une réflexion.",
+  "quickGuide": "🟣 Guide rapide",
+  "exploreKey": "Explorez les sections clés pour naviguer dans votre voyage identitaire :",
+  "whyTake": "Pourquoi faire ce test ?",
+  "whatIsOrientation": "Qu'est-ce que l'orientation sexuelle ?",
+  "understandingSpectrum": "Comprendre le spectre LGBTQIA+",
+  "beforeBegin": "Avant de commencer",
+  "howWorks": "Comment fonctionne ce quiz",
+  "scoreBreakdown": "Analyse des scores & signification",
+  "resultsMeaning": "Que signifient vos résultats",
+  "stillExploring": "Encore en exploration ? C'est normal",
+  "commonQuestions": "Questions fréquentes",
+  "helpfulResources": "Ressources utiles",
+  "aboutDescription": "Cette évaluation confidentielle de 16 questions est conçue pour vous aider à explorer votre orientation sexuelle. Basée sur des principes psychologiques, elle fournit un cadre pour réfléchir à l'attraction entre personnes de même sexe.",
+  "privacyDescription": "Vos réponses restent totalement privées. Nous ne stockons aucune donnée personnelle ni réponse au quiz.",
+  "selfDiscoveryDescription": "Utilisez ce quiz comme point de départ pour une réflexion personnelle, pas comme une étiquette définitive.",
+  "spectrumDescription": "Comprenez que la sexualité existe sur un spectre et peut être fluide au fil du temps.",
+  "quizDuration": "Gratuit, anonyme et prend seulement 5 minutes"
 }
