--- a/locales/it/translation.json
+++ b/locales/it/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "Vedi risultati",
   "previous": "Precedente",
   "next": "Successivo",
-  "skip": "Salta"
+  "skip": "Salta",
+  "pageTitle": "Test Gay | Sono gay? Quiz per la scoperta di sé",
+  "pageDescription": "🌈 La comprensione della tua identità inizia con la consapevolezza. Il quiz \"Sono gay?\" è un primo passo sicuro – senza pressioni, solo riflessione.",
+  "quickGuide": "🟣 Guida rapida",
+  "exploreKey": "Esplora le sezioni chiave per navigare nel tuo viaggio di identità:",
+  "whyTake": "Perché fare questo test?",
+  "whatIsOrientation": "Cos'è l'orientamento sessuale?",
+  "understandingSpectrum": "Comprendere lo spettro LGBTQIA+",
+  "beforeBegin": "Prima di iniziare",
+  "howWorks": "Come funziona il quiz",
+  "scoreBreakdown": "Analisi del punteggio e significato",
+  "resultsMeaning": "Cosa significano i tuoi risultati",
+  "stillExploring": "Ancora in esplorazione? Va bene così",
+  "commonQuestions": "Domande comuni",
+  "helpfulResources": "Risorse utili",
+  "aboutDescription": "Questa valutazione confidenziale di 16 domande è progettata per aiutarti a esplorare il tuo orientamento sessuale. Basata su principi psicologici, fornisce un quadro per riflettere sull'attrazione verso lo stesso sesso.",
+  "privacyDescription": "Le tue risposte rimangono completamente private. Non memorizziamo alcun dato personale o risposta al quiz.",
+  "selfDiscoveryDescription": "Usa questo quiz come punto di partenza per la riflessione personale, non come un'etichetta definitiva.",
+  "spectrumDescription": "Comprendi che la sessualità esiste su uno spettro e può essere fluida nel tempo.",
+  "quizDuration": "Gratuito, anonimo e richiede solo 5 minuti"
 }
