--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "結果を見る",
   "previous": "前へ",
   "next": "次へ",
-  "skip": "スキップ"
+  "skip": "スキップ",
+  "pageTitle": "ゲイテスト | 私はゲイ？自己発見クイズ",
+  "pageDescription": "🌈 アイデンティティの理解は気づきから始まります。「ゲイチェックテスト」は安全な第一歩です – プレッシャーなし、ただの自己反省です。",
+  "quickGuide": "🟣 クイックガイド",
+  "exploreKey": "アイデンティティの旅を案内する重要なセクション：",
+  "whyTake": "なぜこのテストを受けるのか？",
+  "whatIsOrientation": "性的指向とは？",
+  "understandingSpectrum": "LGBTQIA+スペクトラムを理解する",
+  "beforeBegin": "テスト開始前に",
+  "howWorks": "テストの仕組み",
+  "scoreBreakdown": "スコア分析と意味",
+  "resultsMeaning": "テスト結果の意味",
+  "stillExploring": "まだ探索中？それで大丈夫",
+  "commonQuestions": "よくある質問",
+  "helpfulResources": "役立つリソース",
+  "aboutDescription": "この16問の秘密厳守のテストは、あなたの性的指向を探るためのものです。心理学的原理に基づき、同性への魅力を振り返るためのフレームワークを提供します。",
+  "privacyDescription": "回答は完全に非公開です。個人データやテスト回答は一切保存しません。",
+  "selfDiscoveryDescription": "このテストは自己反省の出発点として使用し、確定的なラベル付けとしては使用しないでください。",
+  "spectrumDescription": "セクシュアリティはスペクトラム上に存在し、時間とともに変化する可能性があることを理解しましょう。",
+  "quizDuration": "無料、匿名で5分程度で完了"
 }
