--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "결과 보기",
   "previous": "이전",
   "next": "다음",
-  "skip": "건너뛰기"
+  "skip": "건너뛰기",
+  "pageTitle": "게이 테스트 | 나는 게이일까? 자아 발견 퀴즈",
+  "pageDescription": "🌈 자신의 정체성 이해는 인식에서 시작됩니다. \"게이 테스트\"는 안전한 첫 걸음입니다 – 부담 없이, 단순한 자기성찰입니다.",
+  "quickGuide": "🟣 빠른 가이드",
+  "exploreKey": "정체성 여정을 안내하는 주요 섹션:",
+  "whyTake": "왜 이 테스트를 해야 하나요?",
+  "whatIsOrientation": "성적 지향이란 무엇인가요?",
+  "understandingSpectrum": "LGBTQIA+ 스펙트럼 이해하기",
+  "beforeBegin": "테스트 시작 전 알아야 할 것",
+  "howWorks": "테스트 진행 방식",
+  "scoreBreakdown": "점수 분석 및 의미",
+  "resultsMeaning": "테스트 결과의 의미",
+  "stillExploring": "아직 탐색 중이신가요? 괜찮습니다",
+  "commonQuestions": "자주 묻는 질문",
+  "helpfulResources": "도움이 되는 자료",
+  "aboutDescription": "이 16문항의 비밀이 보장되는 평가는 당신의 성적 지향을 탐색하는 데 도움을 주기 위해 설계되었습니다. 심리학적 원리를 바탕으로, 동성 간 끌림을 성찰하는 프레임워크를 제공합니다.",
+  "privacyDescription": "답변은 완전히 비공개로 유지됩니다. 개인정보나 테스트 응답을 저장하지 않습니다.",
+  "selfDiscoveryDescription": "이 테스트를 자기성찰의 시작점으로 사용하세요, 확정적인 라벨로 사용하지 마세요.",
+  "spectrumDescription": "성적 지향은 스펙트럼 상에 존재하며 시간이 지남에 따라 유동적일 수 있음을 이해하세요.",
+  "quizDuration": "무료, 익명으로 5분이면 완료"
 }
