--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "Ver resultados",
   "previous": "Anterior",
   "next": "Próximo",
-  "skip": "Pular"
+  "skip": "Pular",
+  "pageTitle": "Teste Gay | Sou gay? Teste de autodescobrimento",
+  "pageDescription": "🌈 A compreensão da sua identidade começa com a consciência. O \"Teste Sou Gay?\" é um primeiro passo seguro – sem pressão, apenas reflexão.",
+  "quickGuide": "🟣 Guia rápido",
+  "exploreKey": "Explore seções-chave para navegar em sua jornada de identidade:",
+  "whyTake": "Por que fazer este teste?",
+  "whatIsOrientation": "O que é orientação sexual?",
+  "understandingSpectrum": "Entendendo o espectro LGBTQIA+",
+  "beforeBegin": "Antes de começar",
+  "howWorks": "Como funciona o teste",
+  "scoreBreakdown": "Análise da pontuação e significado",
+  "resultsMeaning": "O que significam seus resultados",
+  "stillExploring": "Ainda explorando? Tudo bem",
+  "commonQuestions": "Perguntas comuns",
+  "helpfulResources": "Recursos úteis",
+  "aboutDescription": "Esta avaliação confidencial de 16 questões foi projetada para ajudar você a explorar sua orientação sexual. Baseada em princípios psicológicos, fornece um framework para refletir sobre atração pelo mesmo sexo.",
+  "privacyDescription": "Suas respostas permanecem completamente privadas. Não armazenamos nenhum dado pessoal ou respostas do teste.",
+  "selfDiscoveryDescription": "Use este teste como ponto de partida para reflexão pessoal, não como um rótulo definitivo.",
+  "spectrumDescription": "Entenda que a sexualidade existe em um espectro e pode ser fluida ao longo do tempo.",
+  "quizDuration": "Gratuito, anônimo e leva apenas 5 minutos"
 }
