--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "查看结果",
   "previous": "上一题",
   "next": "下一题",
-  "skip": "跳过"
+  "skip": "跳过",
+  "pageTitle": "同性恋测试 | 我是同性恋吗？自我探索测试",
+  "pageDescription": "🌈 了解自己的身份从意识开始。"我是同性恋测试"是一个安全的第一步 — 无压力，只是反思。",
+  "quickGuide": "🟣 快速指南",
+  "exploreKey": "探索关键部分，开启你的身份之旅：",
+  "whyTake": "为什么要做这个测试？",
+  "whatIsOrientation": "什么是性取向？",
+  "understandingSpectrum": "了解LGBTQIA+光谱",
+  "beforeBegin": "开始测试前须知",
+  "howWorks": "测试如何进行",
+  "scoreBreakdown": "分数解析与含义",
+  "resultsMeaning": "测试结果代表什么",
+  "stillExploring": "仍在探索？没关系",
+  "commonQuestions": "常见问题",
+  "helpfulResources": "有用资源",
+  "aboutDescription": "这个保密的16题测试旨在帮助你探索自己的性取向。基于心理学原理，为你提供一个框架来反思同性吸引力，了解你在性取向光谱上的位置。",
+  "privacyDescription": "你的答案完全保密。我们不存储任何个人数据或测试回答。",
+  "selfDiscoveryDescription": "把这个测试作为个人反思的起点，而不是一个确定的标签。",
+  "spectrumDescription": "了解性取向存在于一个光谱中，并且可能随时间而变化。",
+  "quizDuration": "免费、匿名，只需5分钟"
 }
