--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -11,5 +11,24 @@
   "seeResults": "Посмотреть результаты",
   "previous": "Назад",
   "next": "Вперед",
-  "skip": "Пропустить"
+  "skip": "Пропустить",
+  "pageTitle": "Гей тест | Я гей? Тест на самопознание",
+  "pageDescription": "🌈 Понимание вашей идентичности начинается с осознания. \"Тест Я гей?\" – это безопасный первый шаг – без давления, только самоанализ.",
+  "quickGuide": "🟣 Краткое руководство",
+  "exploreKey": "Исследуйте ключевые разделы для навигации по пути самопознания:",
+  "whyTake": "Зачем проходить этот тест?",
+  "whatIsOrientation": "Что такое сексуальная ориентация?",
+  "understandingSpectrum": "Понимание спектра ЛГБТК+",
+  "beforeBegin": "Перед началом",
+  "howWorks": "Как работает тест",
+  "scoreBreakdown": "Анализ результатов и их значение",
+  "resultsMeaning": "Что означают ваши результаты",
+  "stillExploring": "Всё еще исследуете? Это нормально",
+  "commonQuestions": "Частые вопросы",
+  "helpfulResources": "Полезные ресурсы",
+  "aboutDescription": "Этот конфиденциальный тест из 16 вопросов разработан, чтобы помочь вам исследовать вашу сексуальную ориентацию. Основанный на психологических принципах, он предоставляет структуру для размышлений о однополом влечении.",
+  "privacyDescription": "Ваши ответы остаются полностью конфиденциальными. Мы не храним никаких личных данных или ответов на тест.",
+  "selfDiscoveryDescription": "Используйте этот тест как отправную точку для самоанализа, а не как окончательный ярлык.",
+  "spectrumDescription": "Поймите, что сексуальность существует в спектре и может быть подвижной со временем.",
+  "quizDuration": "Бесплатно, анонимно и занимает всего 5 минут"
 }
